<resources>
    <string name="app_name">Class Management</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="strMadeBy">by Global IT Computer Academy</string>
    <string name="title_activity_dashboard_employee">DashboardEmployeeActivity</string>
    <string name="strMadeWith">Made with</string>
    <string name="strHeart">❤</string>
    <string name="strHome">Home</string>
    <string name="strCources">Cources</string>
    <string name="strPhotoGallery">Photo Gallery</string>
    <string name="strViewOnMap">View on Map</string>
    <string name="strUseScanner">Take Attendence</string>
    <string name="strShare">Share</string>
    <string name="strTimeSchedule">Tuition Time Schedules </string>
    <string name="strLoginNow">Login</string>
    <string name="select_picture_from">Select photo from</string>
    <string name="select_video_from">Select video from</string>
    <string name="select_pdf_from">Select pdf from</string>
    <string name="upload_file_options">Upload File</string>
    <string name="title_activity_employee_login">Employee Login</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="strUsername">Username</string>
    <string name="hint_username">Username (Max. 12 Characters)</string>
    <string name="strPassword">Password</string>
    <string name="hintPassword">Password (Max. 8 Characters)</string>
    <string name="strLoginNote">NOTE\nUsername and Password are Auto-generated by Global IT Infosolution.</string>
    <string name="strOr">OR</string>
    <string name="toast_invalid_username">Please, Enter valid Username.</string>
    <string name="toast_invalid_password">Please, Enter valid Password.</string>
    <string name="toast_login_success">Login Successful.</string>
    <string name="strLogout">Logout</string>
    <string name="strLoadingNewsFeed">Loading news feeds...</string>
    <string name="strDummyText">lorem ipsum is the dflorem ipsum is the dflorem ipsum is the dflorem ipsum is the dflorem ipsum is the dflorem ipsum is the dflorem ipsum is the dflorem ipsum is the dflorem ipsum is the dflorem ipsum is the dflorem ipsum is the dflorem ipsum is the.</string>
    <string name="strOdhavBranchAddress">2nd Floor, Raghuvilla Avenue, near navrang school, Ambica Nagar, Odhav, Indravihar Park Society, Vallabha Nagar, Odhav, Ahmedabad, Gujarat 382415</string>
    <string name="toast_no_internet">Please check internet connection</string>
    <string name="strLiteratureGallery">Literature Gallery</string>
    <string name="strReadPdf">Know More:</string>
    <string name="strCourseMarquee">Global IT Computer Academy - A Group of exited peoples thanking you for taking interest to know more about what we are. You will find necessary course details here. You can contact us for further query. Call us on : +91 96019 78505</string>
    <string name="save">Save</string>
    <string name="strAddNewInquiry">Add New Inquiry</string>
    <string name="strSubmit">Submit</string>
    <string name="strCancel">Cancel</string>
    <string name="strGITAttendance">GIT-Attendence</string>
    <string name="strAddNewStudent">Add New Student</string>
    <string name="strAddNewBranch">Add New Branch</string>
    <string name="strFirstname">First name</string>
    <string name="strLastname">Last name</string>
    <string name="strMobileNo">Mobile number</string>
    <string name="strReferenceBy">Reference By</string>
    <string name="strFeedback">Feedback</string>
    <string name="strSubmitInquiry">Submit Inquiry</string>
    <string name="toast_invalid_firstname">Please enter valid firstname</string>
    <string name="toast_invalid_lastname">Please enter valid lastname</string>
    <string name="toast_invalid_mobileNO">Please  enter valid mobile number</string>
    <string name="toast_invalid_branch">Please select valid branch name</string>
    <string name="toast_invalid_length_firstname">Firstname should be of more than two characters.</string>
    <string name="toast_invalid_length_lastname">Lastname should be of more than two characters.</string>
    <string name="toast_invalid_length_mobile">Minimum 10 digits required.</string>
    <string name="toast_invalid_mobile_value">Mobile number can not be Zero.</string>
    <string name="Cancel">Cancel</string>
    <string name="YES">Yes</string>
    <string name="strName">Name</string>
    <string name="strBirthDate">Birth Date</string>
    <string name="strEmail">Email</string>
    <string name="hintEmail">e.g. globalitians@gmail.com</string>
    <string name="strCourses">Courses</string>
    <string name="strBranch">Branch</string>
    <string name="strParentName">Parent\'s Name</string>
    <string name="strParentMobile">Parent\'s Mobile</string>
    <string name="strAddress">Address</string>
    <string name="strReference">Reference</string>
    <string name="strJoinedOn">Joined Global IT on</string>
    <string name="strSave">Save</string>
    <string name="strSelectCourses">--Select Courses--</string>
    <string name="toast_select_inquiry_date">Please select Inquiry date</string>
    <string name="strCourse">Course</string>
    <string name="inquiry">Inquiry</string>
    <string name="student">Student</string>
    <string name="strAddNewCourse">Add New Course</string>
    <string name="strDuration">Duration</string>
    <string name="strFees">Course Fees</string>
    <string name="strCourseCategories">Course Category</string>
    <string name="strCourseImage">Course Image or Thumbhnail (optional)</string>
    <string name="strCourseFile">Course File - Syllabus (optional)</string>
    <string name="toast_invalid_fees">Please enter valid fees amount</string>
    <string name="toast_invalid_coursename">Please enter course name</string>
    <string name="toast_invalid_courseduration">Please select valid course duration</string>
    <string name="toast_invalid_course_fees">Please enter valid course fees</string>
    <string name="toast_invalid_course_category">Please select valid course category</string>
    <string name="strPostCoursePdf">Upload PDF</string>
    <string name="strPostPhoto">Upload Course Photo</string>
    <string name="strSelectUploadOptions">Upload</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_setting">Go to Setting</string>
    <string name="permission_never_asked">Global IT has required some permissions to proceed. Please Enable them from setting.</string>
    <string name="toast_attachment_photo_size_null">Photo is not valid</string>
    <string name="strJoiningDate">Joining Date</string>
    <string name="strConfirmPassword">Confirm Password</string>
    <string name="strStudentCourseDetails">Student\'s Course Details</string>
    <string name="strStudentCourseStatus">Course Status</string>
    <string name="strOtherDetails">Other Details</string>
    <string name="toast_invalid_email">Please enter valid email address</string>
    <string name="toast_invalid_confirm_password">Please confirm password</string>
    <string name="toast_password_not_matched">Password does not matched with Confirm Password</string>
    <string name="toast_invalid_birthDate">Please enter valid Birth date</string>
    <string name="toast_invalid_parent_name">Please enter Parent\'s name</string>
    <string name="toast_invalid_parent_mobile_no">Please enter Parent\'s mobie number</string>
    <string name="toast_invalid_joining_date">Please select Joining date</string>
    <string name="toast_invalid_address">Please enter valid address</string>
    <string name="toast_invalid_course_status">Please select course status</string>
    <string name="toast_invalid_certified">Please select student\'s certified status</string>
    <string name="toast_invalid_book_material_status">Please select Book material status</string>
    <string name="toast_invalid_bag_provided_status">Please select Bag Provided status</string>
    <string name="strStudentCertificate">Certificate</string>
    <string name="strBookMaterial">Book Material</string>
    <string name="strBag">Bag</string>
    <string name="strView">View</string>
    <string name="strAddNow">Add Now</string>
    <string name="strAddNew">Add New</string>
    <string name="strStudentPersonalDetails">Student\'s Personal Details</string>
    <string name="strConfirm">Confirm</string>
    <string name="strDismiss">Dismiss</string>
    <string name="strStudentId">Student Id</string>
    <string name="strStudentCourse">Student Course</string>
    <string name="strAttendanceStatus">Attendance Status</string>
    <string name="strIn">In</string>
    <string name="strOut">Out</string>
    <string name="strSelectInOutValue">Select In or Out</string>
    <string name="strScanStudentId">Scan Student\'s ID</string>
    <string name="forgotStudentId"><![CDATA[Don\'t Remember Student ID ? <b><u>Click Here to Search</u></b>]]></string>
    <string-array name="array_branches">
        <item>Odhav branch</item>
        <item>Vastral branch</item>
    </string-array>
    <string-array name="array_referenceBy">
        <item>Self</item>
        <item>Friend</item>
        <item>Online Advertisement</item>
        <item>Global IT Person</item>
        <item>Global IT Partner</item>
    </string-array>
    <string-array name="array_course_durations">
        <item>1 Month</item>
        <item>2 Months</item>
        <item>3 Months</item>
        <item>4 Months</item>
        <item>5 Months</item>
        <item>6 Months</item>
        <item>1 Year</item>
        <item>2 Years</item>
        <item>3 Years</item>
        <item>Flexible</item>
    </string-array>
    <string-array name="array_course_fees">
        <item>3000</item>
        <item>3500</item>
        <item>4000</item>
        <item>4500</item>
        <item>5000</item>
        <item>5500</item>
        <item>6000</item>
        <item>6500</item>
        <item>7000</item>
        <item>7500</item>
        <item>8000</item>
        <item>9500</item>
        <item>10000</item>
        <item>11000</item>
        <item>12000</item>
        <item>13000</item>
        <item>14000</item>
        <item>15000</item>
        <item>16000</item>
        <item>17000</item>
        <item>18000</item>
        <item>19000</item>
        <item>20000</item>
        <item>25000</item>
        <item>30000</item>
    </string-array>
    <string-array name="array_course_categories">
        <item>Training</item>
        <item>Animation</item>
        <item>Designing</item>
        <item>Programming language</item>
        <item>Basic Computer</item>
        <item>Account</item>
    </string-array>
    <string-array name="options_for_upload_file">
        <item>Upload Photo</item>
        <item>Upload PDF</item>
        <item>Cancel</item>
    </string-array>
    <string-array name="photo_attachment_formats">
        <item>jpg</item>
        <item>jpeg</item>
        <item>png</item>
    </string-array>
    <string name="sortby_name_asc">Name Accending</string>
    <string name="sortby_name_des">Name Descending</string>
    <string name="sortby_date">By Date</string>
    <string name="sortby_course">By Course</string>
    <string name="strSearch">Search</string>
    <string name="action_pdf">Export to PDF</string>
    <string name="action_excel">Export to Excel</string>
    <string name="strJobType">Job Type</string>
    <string name="strDesignation">Designation</string>
    <string name="strSalary">Salary</string>
</resources>