<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_pdf"
        android:orderInCategory="100"
        android:title="@string/action_pdf"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_excel"
        android:orderInCategory="100"
        android:title="@string/action_excel"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/strSearch"
        android:visible="false"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_clear_particular_student_data"
        android:icon="@drawable/ic_close"
        android:iconTint="@color/colorWhite"
        android:title="@string/strSearch"
        android:visible="false"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:iconTint="@color/colorWhite"
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_student"
        android:title=""
        app:showAsAction="ifRoom|withText"></item>
    <item
        android:visible="false"
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:iconTint="@color/colorWhite"
        android:title=""
        app:showAsAction="ifRoom|withText"></item>
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:iconTint="@color/colorWhite"
        android:title=""
        app:showAsAction="ifRoom"></item>
</menu>
