<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/size_5"
    android:background="@android:color/transparent"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_border_round"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_name_asc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="@dimen/size_15"
            android:paddingBottom="@dimen/size_15"
            android:text="@string/sortby_name_asc"
            android:textColor="@color/colorDialogOptions"
            android:textSize="@dimen/size_18" />

        <View
            android:id="@+id/viewEdit"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_300" />

        <TextView
            android:id="@+id/txt_name_dsc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="@dimen/size_15"
            android:paddingBottom="@dimen/size_15"
            android:text="@string/sortby_name_des"
            android:textColor="@color/colorDialogOptions"
            android:textSize="@dimen/size_18" />

        <View
            android:id="@+id/viewShare"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_300" />

        <TextView
            android:id="@+id/txt_by_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="@dimen/size_15"
            android:paddingBottom="@dimen/size_15"
            android:text="@string/sortby_date"
            android:textColor="@color/colorDialogOptions"
            android:textSize="@dimen/size_18" />

        <View
            android:id="@+id/viewFlag"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_300" />

        <TextView
            android:id="@+id/txt_by_course"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="@dimen/size_15"
            android:paddingBottom="@dimen/size_15"
            android:text="@string/sortby_course"
            android:textColor="@color/colorDialogOptions"
            android:textSize="@dimen/size_18" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_10"
        android:background="@android:color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/drawable_border_round"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="@dimen/size_15"
            android:paddingBottom="@dimen/size_15"
            android:text="@string/cancel"
            android:textColor="#88ff0FB0"
            android:textSize="@dimen/size_18"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>